--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              Copyright &copy; Your Website 2016
+              Copyright &copy; Jackson Wearn 2016
             </div>
           </div>
         </div>
