--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand" href="#page-top">Jackson Wearn</a>
+          <a class="navbar-brand" href="#page-top">Welcome</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
             <img class="img-responsive" src="img/me.jpg" alt="">
             <div class="intro-text">
               <span class="name">Jackson Wearn</span>
-              <span class="skills">Back End Web Developer - Great Beard</span>
+              <span class="skills">Back End Web Developer at <a href="http://www.careerbuilder.com/" class="btn btn-cb btn-success">Careerbuider</a></span>
             </div>
           </div>
         </div>
