Forgot the letter L

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <img class="img-responsive" src="img/me.jpg" alt="">
             <div class="intro-text">
               <span class="name">Jackson Wearn</span>
-              <span class="skills">Back End Web Developer at <a href="http://www.careerbuilder.com/" class="btn btn-cb btn-success">CareerBuider</a></span>
+              <span class="skills">Back End Web Developer at <a href="http://www.careerbuilder.com/" class="btn btn-cb btn-success">CareerBuilder</a></span>
             </div>
           </div>
         </div>
