--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="javascripts/jq_bootstrap_validation.js"></script>
   <script src="javascripts/freelancer.min.js"></script>
-  <script type="text/javascript" src="javascripts/jacksonwearn-bundle.js"></script>/
+  <script type="text/javascript" src="javascripts/jacksonwearn-bundle.js"></script>
 </body>
 </html>
