--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 <body>
   <div id="root"></div>
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-  <script src="javascripts/jq_bootstrap_validation.js"></script>
-  <script src="javascripts/freelancer.min.js"></script>
+  <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="javascripts/jq_bootstrap_validation.js"></script>
+  <script type="text/javascript" src="javascripts/freelancer.min.js"></script>
   <script type="text/javascript" src="javascripts/jacksonwearn-bundle.js"></script>
 </body>
 </html>
