--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
 
 <body id="page-top">
   <div id="root"></div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
   <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="javascripts/jacksonwearn-bundle.js"></script>
-  <script type="text/javascript" src="javascripts/freelancer.min.js"></script>
 </body>
 </html>
