--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="description" content="Jackson Wearn.  Full Stack Software Engineer"/>
     <meta name="keywords" content="Jackson,Wearn,Jackson Wearn"/>
+    <link rel="canonical" href="https://www.jacksonwearn.com/">
     <script type="application/ld+json">
       {
           "@context": "http://schema.org",
